# passwd-manager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  build.sh  run_clean.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: .gitkeep
include/: crypto_utils.h  logger.h  main_window.h  password_database.h  password_entry.h  settings.h  settings_dialog.h
src/: crypto_utils.cpp  logger.cpp  main.cpp  main_window.cpp  password_database.cpp  password_entry.cpp  settings.cpp  settings_dialog.cpp
